--- a/index.html
+++ b/index.html
@@ -14,30 +14,32 @@
     <div>
         <img src="images/WarehouseLogo.png" alt="Warehouse Logo" width="200" height="100">
     </div>
-    
-</header>
 
-<div class="topnav">
-    <a href="#home">Home</a>
-    <a href="#events">Events</a>
-    <a href="#drinks">Drinks</a>
-    <a href="#sports">Sports</a>
-    <a href="#games">Games</a>
-    <a class="active" href="#about">About</a>
-</div>
+    <div class="topnav">
+        <a href="#home">Home</a>
+        <a href="#events">Events</a>
+        <a href="#drinks">Drinks</a>
+        <a href="#sports">Sports</a>
+        <a href="#games">Games</a>
+        <a class="active" href="#about">About</a>
+    </div>
+</header>
 
 <body>
     <section class="story">
         <h1>Our Story</h1>
-        <p>
+        <div class="bio">
+            <p>
             Warehouse Billiard Bar was first born as Warehouse Saloon & Billiards in 1984 and is still in the hands of the original owner, a rarity in Austin these days. In 2015, we began to envision a new Warehouse: a lush billiard hall, a multi-faceted entertainment facility, and a just plain-old sitting back joint.
-        </p>
-        <p>
+            </p>
+            <p>
             We spent the first half of 2016 remodeling, renovating and re-branding. At 11,000 square feet, Warehouse Billiard Bar has plenty of what is hard to find in Austin these days: parking, air conditioning, and elbow room.
-        </p>
-        <p>
+            </p>
+            <p>
             Come on in and work on your inner pool shark, play some Poker or Incredible 3D golf, or just chill out.
-        </p>
+            </p>
+        </div>
+    </div>
 
     </section>
 
